chore: session improvements
