# src/auth/auth.controller.ts
@@ -6,10 +6,10 @@ import {
   ApiUnprocessableEntityResponse,
 } from '@nestjs/swagger';
 import { SignUpResponse } from './response/sign-up.response';
-import { RegisterRequest } from './request/register.request';
+import { SignUpRequest } from './request/sign-up.request';
 import { UsersService } from '../users/users.service';
 import { PasswordUtils } from '/common/utils';
-import { LoginRequest } from './request/login.request';
+import { SignInRequest } from './request/sign-in.request';
 import { AuthService } from './auth.service';
 import { SignInResponse } from './response/sign-in.response';
 import {
@@ -18,6 +18,7 @@ import {
   Controller,
   HttpCode,
   HttpStatus,
+  Logger,
   Post,
   UnauthorizedException,
   UnprocessableEntityException,
@@ -25,6 +26,12 @@ import {
 } from '@nestjs/common';
 import { AuthGuard } from './guards/auth.gueard';
 import { ApiBadRequestResponse, ApiCreatedResponse, ApiNotFoundResponse, ApiOkResponse } from '/common/decorators';
+import { SessionService } from '/src/session/session.service';
+import { SignOutRequest } from '/src/auth/request/sign-out.request';
+import { UserAgent } from '/common/decorators/user-agent.decorator';
+import ms from 'ms';
+import { futureDate } from '/common/utils/date.utils';
+import { CtxLogger } from '/common/decorators/ctx-logger.decorator';
 
 @ApiTags('Authentication')
 @Controller('sign')
@@ -32,13 +39,14 @@ export class AuthController {
   constructor(
     private readonly usersService: UsersService,
     private readonly authService: AuthService,
+    private readonly sessionService: SessionService,
   ) {}
 
   @Post('up')
   @HttpCode(HttpStatus.CREATED)
   @ApiCreatedResponse(SignUpResponse)
   @ApiBadRequestResponse({ description: 'Returns 400 when the payload is invalid or malformed.' })
-  async signUp(@Body() payload: RegisterRequest) {
+  async signUp(@Body() payload: SignUpRequest) {
     if (!payload.passwordsMatch()) {
       throw new BadRequestException('Passwords do not match');
     }
@@ -55,11 +63,9 @@ export class AuthController {
   @ApiBadRequestResponse({ description: 'Returns 400 when the payload is invalid or malformed.' })
   @ApiUnauthorizedResponse({ description: 'Returns 401 when the credentials are invalid' })
   @ApiUnprocessableEntityResponse({ description: 'Returns 422 when the user is not active' })
-  async signIn(@Body() payload: LoginRequest) {
+  async signIn(@Body() payload: SignInRequest, @UserAgent() userAgent: string) {
     const user = await this.usersService.getByUsername(payload.username);
-
     if (!user) throw new UnauthorizedException('Invalid credentials');
-
     const passwordsMatch = await PasswordUtils.hashCompare(payload.password, user.password);
 
     if (!passwordsMatch) throw new UnauthorizedException('Invalid credentials');
@@ -69,7 +75,9 @@ export class AuthController {
     const accessToken = this.authService.signAccessToken(user.uuid, roles);
 
     const refreshToken = this.authService.getRefreshToken();
-    // TODO: Save token into cache with expiration
+    const expirationDate = futureDate(ms(process.env.REFRESH_TOKEN_EXPIRES_IN));
+
+    await this.sessionService.save(refreshToken.value, userAgent, expirationDate, user);
 
     return SignInResponse.from({
       accessToken: accessToken.value,
@@ -81,12 +89,8 @@ export class AuthController {
   }
 
   @Post('out')
-  @ApiBearerAuth()
-  @UseGuards(AuthGuard)
   @HttpCode(HttpStatus.ACCEPTED)
-  @ApiNotFoundResponse({ description: 'Returns 404 when the token is not found' })
-  @ApiAcceptedResponse({ description: 'Returns 202 when the token is invalidated successfully' })
-  async signOut(): Promise<void> {
-    // TODO: Implement me, invalidate token, use local or Redis cache.
+  signOut(@Body() payload: SignOutRequest, @CtxLogger() logger: Logger) {
+    this.sessionService.delete(payload.refreshToken).catch((error) => logger.warn(error.message));
   }
 }
