# src/auth/request/sign-in.request.ts
@@ -1,7 +1,7 @@
 import { IsAscii, IsNotEmpty, IsString, MaxLength, MinLength } from 'class-validator';
 import { ApiProperty } from '@nestjs/swagger';
 
-export class LoginRequest {
+export class SignInRequest {
   @IsString()
   @IsAscii()
   @MinLength(3)
