# src/auth/request/sign-up.request.ts
@@ -1,7 +1,7 @@
 import { IsAscii, IsNotEmpty, IsString, MaxLength, MinLength } from 'class-validator';
 import { ApiProperty } from '@nestjs/swagger';
 
-export class RegisterRequest {
+export class SignUpRequest {
   @IsString()
   @IsAscii()
   @MinLength(3)
